nhat commit sua them trang tt1

--- a/src/main/resources/templates/thongtin3.html
+++ b/src/main/resources/templates/thongtin3.html
@@ -14,44 +14,102 @@ th:replace="layouts/main-layout::layout(~{::div})">
          <p>
     <strong>Trả lời:</strong>Em có thể tham khảo thông tin của Đại học Đà Nẵng được đăng tải, cập nhật thường xuyên trên trang tuyển sinh tại <strong>Star Of Hope</strong>
         </p>
-        <p style="color: #00BFFF"><strong>2.Hỏi:  Em là học sinh lớp 12, năm nay em có dự định đăng ký xét tuyển vào Đại học Đà Nẵng, em có thể tìm hiểu các thông tin tuyển sinh năm 2023 ở đâu ạ?</strong></p>
-        <p style="color: #00BFFF"><strong>3.Hỏi:  Em được biết năm 2023, Đại học Đà Nẵng có thêm phương thức xét tuyển mới, như vậy để xét tuyển vào ĐHĐN có những phương thức nào?</strong></p>
-        <p style="color: #00BFFF"><strong>4.Hỏi:  Em muốn nộp hồ sơ thi đánh giá năng lực của Đại học Quốc gia Thành phố Hồ Chí Minh để có điểm đăng ký xét tuyển vào Đại học Đà Nẵng, em phải làm như thế nào?</strong></p>
-        <p style="color: #00BFFF"><strong>5.Hỏi:  Em là học sinh lớp 12, năm nay em có dự định đăng ký xét tuyển vào Đại học Đà Nẵng, em có thể tìm hiểu các thông tin tuyển sinh năm 2023 ở đâu ạ?</strong></p>
-        <p style="color: #00BFFF"><strong>6.Hỏi:  Em là học sinh lớp 12, năm nay em có dự định đăng ký xét tuyển vào Đại học Đà Nẵng, em có thể tìm hiểu các thông tin tuyển sinh năm 2023 ở đâu ạ?</strong></p>
-        <p style="color: #00BFFF"><strong>7.Hỏi:  Em là học sinh lớp 12, năm nay em có dự định đăng ký xét tuyển vào Đại học Đà Nẵng, em có thể tìm hiểu các thông tin tuyển sinh năm 2023 ở đâu ạ?</strong></p>
-        <p style="color: #00BFFF"><strong>8.Hỏi:  Em là học sinh lớp 12, năm nay em có dự định đăng ký xét tuyển vào Đại học Đà Nẵng, em có thể tìm hiểu các thông tin tuyển sinh năm 2023 ở đâu ạ?</strong></p>
-        <p style="color: #00BFFF"><strong>9.Hỏi:  Em là học sinh lớp 12, năm nay em có dự định đăng ký xét tuyển vào Đại học Đà Nẵng, em có thể tìm hiểu các thông tin tuyển sinh năm 2023 ở đâu ạ?</strong></p>
-        <p style="color: #00BFFF"><strong>10.Hỏi:  Em là học sinh lớp 12, năm nay em có dự định đăng ký xét tuyển vào Đại học Đà Nẵng, em có thể tìm hiểu các thông tin tuyển sinh năm 2023 ở đâu ạ?</strong></p>
-        <p style="color: #00BFFF"><strong>12.Hỏi:  Em là học sinh lớp 12, năm nay em có dự định đăng ký xét tuyển vào Đại học Đà Nẵng, em có thể tìm hiểu các thông tin tuyển sinh năm 2023 ở đâu ạ?</strong></p>
-    
+        <p>- Xem thông tin chi tiết trên Fanpage Tuyển sinh Đại học Đà Nẵng:<br>
+
+- Liên hệ qua điện thoại đến số Hotline tuyển sinh của Đại học Đà Nẵng: <strong>(0236) 3835345</strong> để được tư vấn.<br>
+
+-  Gửi thư điện tử email đến địa chỉ mail:<strong>tuyensinhdhdn1@ac.udn.vn</strong><br>
+
+- Hiện tại, Đại học Đà Nẵng đã đăng thông tin đăng ký xét tuyển vào các cơ sở đào tạo của ĐHĐN năm 2023, thông tin chi tiết tại địa chỉ:https://ts.udn.vn/DHCD/Chinhquy/DHTbao/9429</p>
+        <p style="color: #00BFFF"><strong>2.Hỏi:  Em được biết năm 2023, Đại học Đà Nẵng có thêm phương thức xét tuyển mới, như vậy để xét tuyển vào ĐHĐN có những phương thức nào?</strong></p>
+        
+        <p>
+        Trả lời: Năm 2023, Đại học Đà Nẵng áp dụng các phương thức tuyển sinh như sau:<br>
+
+1. Xét tuyển thẳng theo quy chế tuyển sinh của Bộ Giáo dục và Đào tạo;<br>
+
+2. Xét tuyển theo điểm thi THPT năm 2023;<br>
+
+3. Xét tuyển theo học bạ (kết quả học tập 3 năm THPT);<br>
+
+4. Tuyển sinh riêng theo đề án của các CSĐT;<br>
+
+5. Xét tuyển theo điểm thi ĐGNL, ĐG Tư duy;<br>
+
++ ĐHQG Tp HCM (ĐGNL)<br>
+
++ ĐHBK Hà Nội (ĐGTD)<br>
+
++ Điểm thi của khối các trường sư phạm (ĐGNL)
+        </p>
+        <p style="color: #00BFFF"><strong>3.Hỏi:  Em muốn nộp hồ sơ thi đánh giá năng lực của Đại học Quốc gia Thành phố Hồ Chí Minh để có điểm đăng ký xét tuyển vào Đại học Đà Nẵng, em phải làm như thế nào?</strong></p>
+        <p>Trả lời: Kỳ thi đánh giá năng lực năm 2023 được ĐH Quốc gia TP HCM tổ chức 2 đợt vào ngày 26-3 (đợt 1) và ngày 28-5 (đợt 2). Các thông tin về lịch thi, địa điểm thi tại các địa phương được đăng tải trên website của ĐHQG HCM.<br>
+
+ 
+
+Để biết thông tin chi tiết về kỳ thi, thí sinh truy cập địa chỉ:<br>
+
+http://cete.vnuhcm.edu.vn/thi-danh-gia-nang-luc.html<br>
+
+Để đăng ký dự thi đăng ký online, thí sinh truy cập vào địa chỉ:<br>
+
+https://thinangluc.vnuhcm.edu.vn/
+
+ </p>
+        
+        <p style="color: #00BFFF"><strong>4.Hỏi: Em đã tốt nghiệp THPT năm 2021, em có thể đăng ký xét học bạ theo đợt xét tuyển sớm vào trường được không? Em muốn hỏi cách tính điểm ưu tiên năm nay có gì mới không ạ?</strong></p>
+        <p>Trả lời: Theo Đề án của các cơ sở đào tạo thuộc ĐHĐN, nếu không có yêu cầu năm tốt nghiệp thì khi đăng ký xét tuyển em có thể đăng ký xét học bạ năm nay. Riêng đối với Trường ĐH Kinh tế chỉ lấy điểm học bạ của thí sinh tốt nghiệp năm 2023, Trường ĐH Ngoại ngữ lấy điểm học bạ của thí sinh tốt nghiệp các năm 2021, 2022, 2023.<br>
+
+- Chính sách ưu tiên trong tuyển sinh được áp dụng theo Quy chế tuyển sinh hiện hành, cụ thể như sau:<br>
+
+1. Khung điểm ưu tiên theo đối tượng và khu vực<br>
+
+- Nhóm đối tượng ưu tiên 1(gồm các đối tượng từ 01-04): được cộng 2 điểm.<br>
+
+- Nhóm đối tượng ưu tiên 2(gồm các đối tượng từ 05-07): được cộng 1 điểm.<br>
+
+- Khu vực 1: được cộng 0,75 điểm.<br>
+
+- Khu vực 2 - NT: được cộng 0,5 điểm.<br>
+
+- Khu vực 2: được cộng 0,25 điểm.<br>
+
+- Khu vực 3: không cộng điểm.<br>
+
+2. Cách tính điểm ưu tiên<br>
+
+Từ năm 2023, chính sách ưu tiên trong tuyển sinh có thay đổi như sau:<br>
+
+- Ưu tiên khu vực: thí sinh chỉ được hưởng ưu tiên khu vực trong năm tốt nghiệp THPT và 1 năm kế tiếp.<br>
+
+- Điểm ưu tiên theo khu vực và đối tượng giảm dần đối với các thí sinh đạt từ 22,5 điểm trở lên (quy về thang 30), áp dụng đối với tất cả các phương thức xét tuyển.<br>
+
++ Nếu tổng điểm đạt được theo tổ hợp môn nhỏ hơn 22,5 (khi quy đổi về điểm theo thang 10 và tổng điểm 3 môn tối đa là 30) thì cộng điểm ưu tiên theo khu vực, đối tượng chính sách theo các mức như quy định.<br>
+
++ Nếu tổng điểm đạt được theo tổ hợp môn từ 22,5 trở lên (khi quy đổi về điểm theo thang 10 và tổng điểm 3 môn tối đa là 30) thì cộng điểm ưu tiên theo công thức sau: Điểm ưu tiên = [(30 - Tổng điểm đạt được)/7,5] x Mức điểm ưu tiên theo khu vực, đối tượng chính sách.</p>
+        <p style="color: #00BFFF"><strong>5.Hỏi: Em đã xem thông tin tuyển sinh xét học bạ của Trường ĐH Sư phạm và Khoa Y- Dược, ĐHĐN, có thông tin về ngưỡng đảm bảo đối với ngành Sư phạm thí sinh phải có học lực lớp 12 xếp loại giỏi, đối với ngành Điều dưỡng cần có học lực xếp loại khá, bây giờ em chưa có kết quả học tập lớp 12 thì có đăng ký được không?</strong></p>
+        <p>Trả lời: Em vẫn có thể đăng ký xét tuyển các ngành thuộc khối sư phạm và sức khỏe theo hướng dẫn khi đăng ký, hoặc bổ sung kết quả học tập lớp 12 theo thông báo của ĐHĐN. Sau khi đăng ký, em thường xuyên theo dõi trang tuyển sinh của ĐHĐN để biết thêm thông tin.  </p>
+        <p style="color: #00BFFF"><strong>6.Hỏi: Em có xem thông tin trên website, một số trường có thông báo tuyển sinh riêng – tuyển sinh theo đề án của cơ sở đào tạo, vậy phương thức này là thi tuyển hay xét tuyển, cách đăng ký như thế nào ạ?</strong></p>
+        <p>Trả lời: Đối với phương thức tuyển sinh riêng, các cơ sở đào tạo khác nhau sẽ có thông báo về đối tượng tuyển sinh, tiêu chí, nguyên tắc xét tuyển, để đăng ký hồ sơ xét vào đơn vị nào thì em tham khảo thông tin tuyển sinh cụ thể của đơn vị đó để làm hồ sơ.</p>
+        <p style="color: #00BFFF"><strong>7.Hỏi: Hiện nay ĐHĐN thông báo tuyển sinh xét tuyển theo kết quả học tập THPT, tất cả thí sinh đều phải đăng theo hình thức trực tuyến tại địa chỉ ts.udn.vn. Tuy nhiên trong đề án tuyển sinh của PHKT năm 2023 có cho phép thí sinh nộp trực tiếp tại Phân hiệu Kon Tum. Nếu nộp trực tiếp thì hồ sơ của em có được xem là hợp lệ không ạ?</strong></p>
+        <p>Trả lời: Trường hợp không thể đăng ký trực tuyến, em có thể nộp hồ sơ trực tiếp tại Phòng Đào tạo của phân hiệu Kon Tum, tại đây sẽ có cán bộ phụ trách tuyển sinh hướng dẫn cho em.</p>
+        <p style="color: #00BFFF"><strong>8.Hỏi: Em muốn đăng ký xét tuyển vào ngành có môn thi năng khiếu của ĐHĐN, em có thể tìm hiểu thông tin ở đâu ạ?</strong></p>
+        <p>Trả lời: Đăng ký dự thi năng khiếu và đăng ký xét tuyển vào ngành có môn năng khiếu là 2 công việc độc lập. Thí sinh đăng ký dự thi năng khiếu theo hướng dẫn của trường tổ chức thi. Sau khi đăng ký dự thi năng khiếu, thí sinh cần đăng ký xét tuyển vào ngành có môn năng khiếu để được xét tuyển.<br>
+
+Thí sinh tham khảo thông tin về kỳ Thi năng khiếu bổ trợ, dự kiến sẽ tổ chức vào cuối tháng 5/2023, cụ thể như sau:<br>
+
+ - Trường ĐH Bách khoa tổ chức thi môn năng khiếu vẽ mĩ thuật để xét tuyển vào ngành Kiến trúc của Trường ĐH Bách khoa và ngành Công nghệ kỹ thuật kiến trúc của Trường Đại học SPKT. Thông tin tham khảo tại link sau: https://dut.udn.vn/Tuyensinh2023/Thongbao/id/8127.<br>
+
+- Trường ĐH Sư phạm tổ chức thi các môn năng khiếu (hát, múa, kể chuyện, năng khiếu thể dục thể thao … ) để xét tuyển vào ngành Sư phạm Âm nhạc, Giáo dục mầm non, Giáo dục thể chất của Trường ĐH Sư phạm. Thông tin tham khảo tại link sau: https://tuyensinh.ued.udn.vn/thong-tin-tuyen-sinh/</p>
+        <p style="color: #00BFFF"><strong>9.Hỏi: Em có chứng chỉ tiếng Anh quốc tế IELTS, Toefl ibt…, khi đăng ký xét tuyển vào Đại học Đà Nẵng em có được quy đổi sang điểm để xét theo học bạ?</strong></p>
+        <p>Trả lời: Thí sinh có chứng chỉ tiếng Anh quốc tế không được quy đổi sang điểm để xét theo học bạ. Thí sinh có thể sử dụng các chứng chỉ này để ĐKXT theo phương thức tuyển sinh riêng, thông tin chi tiết trên trang tuyển sinh của ĐHĐN và trang thông tin của các cơ sở đào tạo.</p>
+        <p style="color: #00BFFF"><strong>10.Hỏi: Em muốn hỏi khi đăng ký xét tuyển vào ĐHĐN, em có được đăng ký cùng lúc nhiều phương thức xét tuyển hay không, nếu các phương thức xét tuyển đều có nguyện vọng được trúng tuyển thì em phải thực hiện đăng ký nguyện vọng như thế nào trên hệ thống của Bộ GDĐT để được công nhận trúng tuyển chính thức.</strong></p>
+         <p>Trả lời: Em có thể đăng ký cùng lúc nhiều phương thức xét tuyển thuộc các đơn vị thành viên của ĐHĐN (ví dụ: em có thể đăng ký xét học bạ hoặc xét tuyển theo phương thức xét điểm thi ĐGNL ĐHQGHCM trên trang tuyển sinh của ĐHĐN (tối đa 5 nguyện vọng), xét tuyển sinh riêng tại Trường ĐH Bách khoa (tối đa 3 nguyện vọng), xét tuyển thẳng tại Trường ĐH Kinh tế (nếu đáp ứng các tiêu chí trong Thông báo yêu cầu)…<br>
+
+Sau khi có kết quả xét tuyển sớm theo các phương thức trên, nếu em đủ điều kiện trúng tuyển vào nhiều phương thức thì em phải đặt các nguyện vọng này lên hệ thống của Bộ GDĐT để được công nhận trúng tuyển chính thức sau khi lọc ảo(ưu tiên nguyện vọng là nguyện vọng 1).</p>
    
-    <img alt="" src="https://www.udn.vn/Portals/0/334600146_179804871451631_7007773347559413702_n_1.png">
-    <p>
-        Chương trình được livestream trên: Fanpage <a href="https://www.facebook.com/tuyensinhdaihocdanang">Tuyển sinh Đại học Đà Nẵng</a>
-      </p>
-      <p> hoặc Trang <strong><a href="https://www.facebook.com/tuyensinhdaihocdanang">https://www.facebook.com/tuyensinhdaihocdanang</a></strong></p>
-      <p><strong>Vào lúc 09h00 ngày 12/3/2023 (sáng Chủ nhật).</strong></p>
-<img src="https://www.udn.vn/Portals/0/Ban%20tu%20van%20truc%20tuyen%20tuyen%20sinh%20dai%20hoc%20chinh%20quy%20nam%202023.png" width="1170" height="700">
-<br><br>
-    <p>Tham dự Chương trình có Quý Thầy, Cô lãnh đạo, chuyên gia giàu kinh nghiệm, tâm huyết sẽ trực tiếp tư vấn, giải đáp cặn kẽ những nội dung, câu hỏi mà các em học sinh cùng Quý phụ huynh quan tâm như:</p>
-
-<p>👉 Các phương thức xét tuyển</p>
-<p>👉 Những điểm mới về tuyển sinh-2023</p>
-<p>👉 Chỉ tiêu tuyển sinh</p>
-<p>👉 Thông tin về các ngành đào tạo mới mở</p>
-<p>👉 Thông tin về các ngành học, cơ hội việc làm</p>
-<p>👉 Cơ hội học bổng và các chính sách ưu đãi.</p>
-
-<img alt="" src="https://www.udn.vn/Portals/0/TUYEN%20SINH%202023_1.png" width="1170" height="700">
-<br>
-<br>
-<p>Các em học sinh và Quý phụ huynh có thể đặt câu hỏi trực tuyến thông qua hệ thống tư vấn tuyển sinh online tại<br><strong>Fanpage <a href="https://www.facebook.com/tuyensinhdaihocdanang">“Tuyển sinh Đại học Đà Nẵng”</a></strong> hoặc gọi điện thoại trực tiếp đến số hotline tư vấn tuyển sinh:<strong>0236 3835345</strong></p>
-  
-  <p>Kính mời Quý phụ huynh cùng các em học sinh tham dự Chương trình Livestream và chia sẻ thông tin rộng rãi đến các bạn học sinh và cộng đồng.</p>
-  </section>
-
-
+               &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;--<strong>Bài Đăng Của Đại Học Đà Nẵng</strong>--
+    
  <br>
  <br>
   </div>
